--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
     --varPurple: #9000ff65;
     --solidPink: #B90090;
     --lightPink: #FEB9EF;
-    --lightPinkTrans: #feb9ef98;
+    --lightPinkTrans: #feb9ef6c;
     --blueTrans: #0400ff4b;
 }
 
@@ -22,7 +22,7 @@ body {
 
 nav {
     width: 100%;
-    height: 50px;
+    height: 40px;
     display: flex;
     position: fixed;
     align-items: center;
@@ -36,7 +36,10 @@ nav {
 .bar { 
     width: 25px;
     padding-top: 5px;
+}
 
+.bar:hover {
+    box-shadow: 0px 6px 6px rgba(255, 255, 255, 0.473);
 }
 
 #contenedor-home {
@@ -48,8 +51,11 @@ nav {
     background-color: var(--bgPink);
     color: var(--lightPink);
     text-align: center;
-
 }
+
+
+
+
 
 .perfil {
     position: absolute;
@@ -59,6 +65,8 @@ nav {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 50px;
     user-select: none;
+border-radius: 50px;
+
 }
 .profileImg {
     position: relative;
@@ -75,8 +83,9 @@ h1 {
 
 #contenedor-aboutMe {
     width: 100%;
-    min-height: 70%;
+    min-height: 60%;
     display: flex;
+    flex-wrap: wrap;
     position: relative;
     align-items: center;
     justify-content: center;
@@ -86,10 +95,9 @@ h1 {
 
 .me {
     display: flex;
+    width: 100%;
     align-items: center;
     justify-content: center;
-    position: absolute;
-    top: 40px;
     color: var(--lightPink);
     text-shadow: 6px 6px 6px rgba(255, 255, 255, 0.473);
 }
@@ -172,8 +180,9 @@ h1 {
 }
 
 .text {
-    margin: 15px;
+    margin: 30px;
     font-size: 20px;
+    font-weight: 600;
 }
 
 #name, 
@@ -195,6 +204,13 @@ h1 {
     display: flex;
     padding: 10px;
 }
+
+#name:focus, 
+#mail:focus,
+ #messagge:focus {
+    background-color: rgba(240, 248, 255, 0.61);
+
+ }
 
 ::placeholder {
     color: var(--blueTrans);
@@ -227,6 +243,7 @@ button:hover {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .redes-icon {
@@ -243,6 +260,7 @@ button:hover {
     font-size: 20px;
     color: var(--lightPink);
     margin-bottom: 60px;
+    font-weight: 600;
 }
 
 .red:hover {
@@ -260,3 +278,4 @@ footer {
     margin-right: 40px;
     padding: 20px;
 }
+
